// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Column Select renders correctly 1`] = `
<table class="uk-table">
  <col>
  <thead>
    <tr></tr>
  </thead>
  <tbody>
    <tr></tr>
    <tr></tr>
    <tr></tr>
    <tr></tr>
    <tr></tr>
  </tbody>
</table>
`;

exports[`Table Column Sort renders correctly 1`] = `
<table class="uk-table">
  <col>
  <thead>
    <tr>
      <th class="uk-visible-hover-inline myHeaderClass">
        <a class="uk-position-relative uk-display-block uk-link-reset uk-text-nowrap"><span uk-icon="icon: arrow-down" class="uk-icon uk-position-absolute uk-invisible"></span><span uk-icon="icon: arrow-up" class="uk-icon uk-position-absolute uk-invisible" style="display: none;"></span></a>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="myCellClass">Toy Story</td>
    </tr>
    <tr>
      <td class="myCellClass">A Bug's Life</td>
    </tr>
    <tr>
      <td class="myCellClass">Toy Story 2</td>
    </tr>
    <tr>
      <td class="myCellClass">Monsters, Inc.</td>
    </tr>
    <tr>
      <td class="myCellClass">Finding Nemo</td>
    </tr>
  </tbody>
</table>
`;

exports[`Table renders correctly 1`] = `
<table class="uk-table">
  <col>
  <col>
  <col>
  <col>
  <col>
  <col>
  <thead>
    <tr>
      <th class="myHeaderClass">Name</th>
      <th>
        Custom Header
      </th>
      <th>Slug</th>
      <th class="uk-visible-hover-inline header-class">
        <a class="uk-position-relative uk-display-block uk-link-reset uk-text-nowrap">Name<span uk-icon="icon: arrow-down" class="uk-icon uk-position-absolute uk-invisible"></span><span uk-icon="icon: arrow-up" class="uk-icon uk-position-absolute uk-invisible" style="display: none;"></span></a>
      </th>
      <th>Custom Header Render</th>
      <th>Nested</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class="myCellClass">Toy Story</td>
      <td>
        Custom Cell
      </td>
      <td>toy-story</td>
      <td class="cellClass">Toy Story</td>
      <td>Custom Cell Render</td>
      <td>8.3</td>
    </tr>
    <tr>
      <td class="myCellClass">A Bug's Life</td>
      <td>
        Custom Cell
      </td>
      <td>a-bugs-life</td>
      <td class="cellClass">A Bug's Life</td>
      <td>Custom Cell Render</td>
      <td>7.2</td>
    </tr>
    <tr>
      <td class="myCellClass">Toy Story 2</td>
      <td>
        Custom Cell
      </td>
      <td>toy-story-2</td>
      <td class="cellClass">Toy Story 2</td>
      <td>Custom Cell Render</td>
      <td>7.9</td>
    </tr>
    <tr>
      <td class="myCellClass">Monsters, Inc.</td>
      <td>
        Custom Cell
      </td>
      <td>monsters-inc.</td>
      <td class="cellClass">Monsters, Inc.</td>
      <td>Custom Cell Render</td>
      <td>8.1</td>
    </tr>
    <tr>
      <td class="myCellClass">Finding Nemo</td>
      <td>
        Custom Cell
      </td>
      <td>finding-nemo</td>
      <td class="cellClass">Finding Nemo</td>
      <td>Custom Cell Render</td>
      <td>8.1</td>
    </tr>
  </tbody>
</table>
`;
